force-app/main/default/objects/SPEN_Incident_status_to_action_mapping__mdt/SPEN_Incident_status_to_action_mapping__mdt.object-meta.xml
<CustomObject>
    <label>SPEN Incident status to action mapping</label>
    <pluralLabel>SPEN Incident status to action mappings</pluralLabel>
</CustomObject>