force-app/main/default/objects/SPEN_Incident_status_to_action_mapping__mdt/fields/Applicable_INC_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicable_INC_Type__c</fullName>
    <description>It should contain values like HV_S,HV_N,LV,SP</description>
    <label>Applicable INC Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>