force-app/main/default/objects/SPEN_Incident_status_to_action_mapping__mdt/fields/Incident_Status__c.field-meta.xml
<CustomField>
    <fullName>Incident_Status__c</fullName>
    <label>Incident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Delog</fullName>
            </value>
            <value>
                <fullName>3HourComfortCall</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>DroppedSupplyWithoutNotice</fullName>
            </value>
            <value>
                <fullName>DroppedSupplyWithNotice</fullName>
            </value>
            <value>
                <fullName>3rdCall</fullName>
            </value>
            <value>
                <fullName>ExtendedRestorationTime</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Emergency</fullName>
                <isActive>false</isActive>
                <label>Emergency</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>