force-app/main/default/objects/SPEN_Incident_status_to_action_mapping__mdt/fields/SPEN_DroppedSupplyWithNotice__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DroppedSupplyWithNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dropped Supply With Notice</label>
    <type>Checkbox</type>
</CustomField>