force-app/main/default/objects/SPEN_Incident_status_to_action_mapping__mdt/fields/SPEN_FieldsToBeShown__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FieldsToBeShown__c</fullName>
    <description>Fields To Be Shown</description>
    <label>FieldsToBeShown</label>
    <type>TextArea</type>
</CustomField>