force-app/main/default/objects/SPEN_Incident_status_to_action_mapping__mdt/fields/SPEN_Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Incident_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HV</fullName>
                <default>true</default>
                <label>HV</label>
            </value>
            <value>
                <fullName>LV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>