force-app/main/default/objects/SPEN_Incident_status_to_action_mapping__mdt/fields/SPEN_MessagingTaskEvent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MessagingTaskEvent__c</fullName>
    <label>Messaging Task Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3-Hour Comfort Call</fullName>
            </value>
            <value>
                <fullName>3rd Call Received</fullName>
            </value>
            <value>
                <fullName>Dropped Supply with Notice</fullName>
            </value>
            <value>
                <fullName>Dropped Supply without Notice</fullName>
            </value>
            <value>
                <fullName>Estimated Restoration Time Extended</fullName>
            </value>
            <value>
                <fullName>Incident Created</fullName>
            </value>
            <value>
                <fullName>Incident Restored</fullName>
            </value>
            <value>
                <fullName>Resource Arrival On Site</fullName>
            </value>
            <value>
                <fullName>Resource Dispatched</fullName>
            </value>
            <value>
                <fullName>HV proactive contact</fullName>
            </value>
            <value>
                <fullName>3HourComfortCall</fullName>
                <isActive>false</isActive>
                <label>3HourComfortCall</label>
            </value>
            <value>
                <fullName>3rdCall</fullName>
                <isActive>false</isActive>
                <label>3rdCall</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Created</fullName>
                <isActive>false</isActive>
                <label>Created</label>
            </value>
            <value>
                <fullName>Delog</fullName>
                <isActive>false</isActive>
                <label>Delog</label>
            </value>
            <value>
                <fullName>Dispatch</fullName>
                <isActive>false</isActive>
                <label>Dispatch</label>
            </value>
            <value>
                <fullName>DroppedSupplyWithNotice</fullName>
                <isActive>false</isActive>
                <label>DroppedSupplyWithNotice</label>
            </value>
            <value>
                <fullName>DroppedSupplyWithoutNotice</fullName>
                <isActive>false</isActive>
                <label>DroppedSupplyWithoutNotice</label>
            </value>
            <value>
                <fullName>Emergency</fullName>
                <isActive>false</isActive>
                <label>Emergency</label>
            </value>
            <value>
                <fullName>ExtendedRestorationTime</fullName>
                <isActive>false</isActive>
                <label>ExtendedRestorationTime</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>On Site</fullName>
                <isActive>false</isActive>
                <label>On Site</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>