force-app/main/default/objects/SPEN_Incident_status_to_action_mapping__mdt/fields/SPEN_Outagestate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Outagestate__c</fullName>
    <description>This field maps the value corresponding to outage state</description>
    <label>Outage state</label>
    <length>80</length>
    <type>Text</type>
</CustomField>